# MS-OVBA

./: .gitignore  CODE_REVIEW.md  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: FEATURE_BUILDER.md
tests/Unit/: test_builder.py
vbaProjectCompiler/: builder.py
vbaProjectCompiler/Models/: __init__.py
