[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vba_project_compiler"
version = "0.0.1"
authors = [
  { name="Kevin Nowaczyk", email="beakerboy99@yahoo.com" },
]
description = "Create a vbaProject.bin file from VBA source files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "ms_ovba_compression",
  "ms_ovba_crypto",
  "ms_cfb @ git+https://github.com/James-McNeil/MS-CFB@main",
  "ms_pcode_assembler @ git+https://github.com/James-McNeil/MS-Pcode-Assembler@main"
]

[project.optional-dependencies]
tests = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "flake8>=6.0",
  "flake8-annotations",
  "mypy",
  "pep8-naming",
  "coveralls>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/Beakerboy/vbaProject-Compiler"
"Bug Tracker" = "https://github.com/Beakerboy/vbaProject-Compiler/issues"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = [
    "tests",
]
